fixed navbar positions and margins and removed overflow

--- a/src/Styles/genralStyling.css
+++ b/src/Styles/genralStyling.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     outline: none;
     user-select: none;
+    /* overflow: hidden; */
 }
 
 .underline{
@@ -11,5 +12,9 @@
     width: 100vw;
     background-color: rgb(51, 51, 51);
     transition: all 0.5s ease;
+}
+
+body{
+    overflow: hidden;
 }
 
